# create_docs

./: .dockerignore  .gitignore  DEPLOYMENT_VERSION_GUIDE.md  Dockerfile  PRODUCTION_SETUP.md  QA_REPORT.md  README.md  app.py  docker-compose.yml  docker-deploy.sh  estimate-webapp.service  estimate.db  gunicorn.conf.py  index.html  install-python-version.sh  install.sh  pyproject.toml  requirements.txt  run.py  run_app.sh  script.js  start.bat  start.sh  style.css  test-install.sh
static/: script.js  style.css
templates/: index.html
