[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interior-estimate-webapp"
version = "1.0.0"
description = "Korean Interior Estimate & Receipt Record Generator"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Interior Estimate Team"},
]
keywords = ["flask", "interior", "estimate", "webapp", "korean"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "Flask>=2.3.0,<3.0.0",
    "Flask-CORS>=4.0.0,<5.0.0",
    "Werkzeug>=2.3.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0; python_version>='3.9'",
    "numpy>=1.19.0,<1.25.0; python_version=='3.8'",
    "openpyxl>=3.1.0,<4.0.0",
    "gunicorn>=21.0.0,<22.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/interior-estimate-webapp"
"Bug Reports" = "https://github.com/your-username/interior-estimate-webapp/issues"
"Source" = "https://github.com/your-username/interior-estimate-webapp"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]